[tool.poetry]
name = "unlock-protocol-bot"
version = "0.1.0"
description = ""
authors = ["kuznetsov-m"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.7.0"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
